--- a/projects/mmLoader-shellcode-generator/mmLoader-shellcode-generator.vcxproj
+++ b/projects/mmLoader-shellcode-generator/mmLoader-shellcode-generator.vcxproj
@@ -75,28 +75,30 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <IntDir>$(SolutionDir)temp\$(PlatformShortName)\$(Configuration)\$(ProjectName)\</IntDir>
-    <TargetName>$(ProjectName)d</TargetName>
+    <TargetName>$(ProjectName)-$(PlatformShortName)-$(PlatformToolset)-d</TargetName>
     <IgnoreImportLibrary>true</IgnoreImportLibrary>
-    <OutDir>$(SolutionDir)output\bin\$(PlatformShortName)\</OutDir>
+    <OutDir>$(SolutionDir)output\bin\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <TargetName>$(ProjectName)d</TargetName>
+    <TargetName>$(ProjectName)-$(PlatformShortName)-$(PlatformToolset)-d</TargetName>
     <IgnoreImportLibrary>true</IgnoreImportLibrary>
     <LinkIncremental>false</LinkIncremental>
     <IntDir>$(SolutionDir)temp\$(PlatformShortName)\$(Configuration)\$(ProjectName)\</IntDir>
-    <OutDir>$(SolutionDir)output\bin\$(PlatformShortName)\</OutDir>
+    <OutDir>$(SolutionDir)output\bin\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <IntDir>$(SolutionDir)temp\$(PlatformShortName)\$(Configuration)\$(ProjectName)\</IntDir>
     <IgnoreImportLibrary>true</IgnoreImportLibrary>
-    <OutDir>$(SolutionDir)output\bin\$(PlatformShortName)\</OutDir>
+    <OutDir>$(SolutionDir)output\bin\</OutDir>
+    <TargetName>$(ProjectName)-$(PlatformShortName)-$(PlatformToolset)</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IgnoreImportLibrary>true</IgnoreImportLibrary>
     <LinkIncremental>false</LinkIncremental>
     <IntDir>$(SolutionDir)temp\$(PlatformShortName)\$(Configuration)\$(ProjectName)\</IntDir>
-    <OutDir>$(SolutionDir)output\bin\$(PlatformShortName)\</OutDir>
+    <OutDir>$(SolutionDir)output\bin\</OutDir>
+    <TargetName>$(ProjectName)-$(PlatformShortName)-$(PlatformToolset)</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
