reform the project

--- a/projects/mmLoader-shellcode-generator/mmLoader-shellcode-generator.vcxproj
+++ b/projects/mmLoader-shellcode-generator/mmLoader-shellcode-generator.vcxproj
@@ -22,36 +22,36 @@
     <ProjectGuid>{F77E5305-41B1-4A6B-BEA2-981953C2C129}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>mmLoadershellcodegenerator</RootNamespace>
-    <WindowsTargetPlatformVersion>7.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141_xp</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141_xp</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141_xp</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141_xp</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -115,6 +115,7 @@
       <InlineFunctionExpansion>Disabled</InlineFunctionExpansion>
       <AssemblerOutput>All</AssemblerOutput>
       <WholeProgramOptimization>false</WholeProgramOptimization>
+      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -129,7 +130,7 @@
       <AdditionalDependencies>Shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateMapFile>true</GenerateMapFile>
       <MapExports>true</MapExports>
-      <FunctionOrder>functionorder_x86</FunctionOrder>
+      <FunctionOrder>functionorder</FunctionOrder>
     </Link>
     <PostBuildEvent>
       <Command>"$(TargetPath)" "$(SolutionDir)\output\include\mmLoader"</Command>
@@ -155,6 +156,7 @@
       <AssemblerOutput>All</AssemblerOutput>
       <WholeProgramOptimization>false</WholeProgramOptimization>
       <OmitFramePointers>false</OmitFramePointers>
+      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -169,7 +171,7 @@
       <AdditionalDependencies>Shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateMapFile>true</GenerateMapFile>
       <MapExports>true</MapExports>
-      <FunctionOrder>functionorder_x64</FunctionOrder>
+      <FunctionOrder>functionorder</FunctionOrder>
     </Link>
     <PostBuildEvent>
       <Command>"$(TargetPath)" "$(SolutionDir)\output\include\mmLoader"</Command>
@@ -206,7 +208,7 @@
       <AdditionalDependencies>Shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateMapFile>true</GenerateMapFile>
       <MapExports>true</MapExports>
-      <FunctionOrder>functionorder_x86</FunctionOrder>
+      <FunctionOrder>functionorder</FunctionOrder>
     </Link>
     <PostBuildEvent>
       <Command>"$(TargetPath)" "$(SolutionDir)\output\include\mmLoader"</Command>
@@ -244,7 +246,7 @@
       <AdditionalDependencies>Shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateMapFile>true</GenerateMapFile>
       <MapExports>true</MapExports>
-      <FunctionOrder>functionorder_x64</FunctionOrder>
+      <FunctionOrder>functionorder</FunctionOrder>
     </Link>
     <PostBuildEvent>
       <Command>"$(TargetPath)" "$(SolutionDir)\output\include\mmLoader"</Command>
@@ -258,7 +260,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="mmLoader-shellcode-generator.cpp" />
+    <ClCompile Include="mmLoader-shellcode-generator.c" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -267,8 +269,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="functionorder_x64" />
-    <None Include="functionorder_x86" />
+    <None Include="functionorder" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
